Added get endpoint for single Submission
